data/derived/comb/progs/unify/prog6386.ml.out
Characters 49-69:
  if n <= 0 then [] else  (digitsOfInt (n/10)) add ([n mod 10]);;
                          ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
